1. ArticleWatch.py, __init__.py - utworzenie modelu ArticleWatch zbierającego informację i śledzeniu artykułu przez zalogowanego user'a. 2. article.html, main.html - update plików, dopisanie funkcjonalności przycisku 'Follow'. Jeśli user jest zalogowany to dla wybranego artykułu, jeśli kliknie na follow to spowoduje zapisanie w bazie w tabeli articlewatch śledzenie artykułu przez tego usera. Wówczas przycisk zmeinia sie w unfollow i po kliknięciu śledzenie zostaje usunięte z tabeli. 3. front_pages_view.py - wydzielenie powtarzającej się funkcjonalności w funkcji index_page i article_page do osobnej funkcji get_article_related_details. Dodanie widoków obsługujących: aktywację (follow_article) i dezaktywację (unfollow_article) śledzenia artykułu. 4. urls.py - dodanie url'i dla nowo utworzonych widoków. 5.

--- a/templates/article.html
+++ b/templates/article.html
@@ -24,7 +24,25 @@
                 <div class="flex flex-wrap gap-2 mt-2">
                     <button class="bg-blue-100 text-blue-700 px-3 py-1 rounded-md text-sm">Download</button>
                     <button class="text-sm text-gray-600">Save</button>
-                    <button class="text-sm text-gray-600">Follow</button>
+                    {% if article.followed_by_user %}
+                            <form action="{% url 'unfollow_article' article.id %}" method="post" class="inline">
+                                {% csrf_token %}
+                                <input type="hidden" name="requester" value="article">
+                                <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
+                                    <span class="text-base">🔕</span>
+                                    <span>Unfollow</span>
+                                </button>
+                            </form>
+                        {% else %}
+                            <form action="{% url 'follow_article' article.id %}" method="post" class="inline">
+                                {% csrf_token %}
+                                <input type="hidden" name="requester" value="article">
+                                <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
+                                    <span class="text-base">🔔</span>
+                                    <span>Follow</span>
+                                </button>
+                            </form>
+                        {% endif %}
                 </div>
             </div>
         </div>
@@ -70,6 +88,3 @@
 {% endif %}
 
 </a>
-{% else %}
-    <p>Brak załączonego pliku.</p>
-{% endif %}
