--- a/templates/main.html
+++ b/templates/main.html
@@ -25,11 +25,11 @@
                 <!-- Link do artykułu: zdjęcie + tytuł -->
                 <a href="{% url 'article' article.id %}" class="block">
                     {% if article.image %}
-                        <img src="{{ article.image.url }}" alt="Miniatura artykułu"
-                             class="w-full h-[200px] object-cover rounded-md mb-2">
+                        <img src="{{ article.image.url }}" alt="Miniaturka artykułu"
+                             class="w-full h-[250px] object-cover rounded-md mb-2">
                     {% else %}
-                        <img src="https://picsum.photos/seed/{{ article.id }}/600/200"
-                             alt="Domyślny obraz" class="w-full h-[200px] object-cover rounded-md mb-2">
+                        <img src="https://picsum.photos/seed/{{ article.id }}/800/250"
+                             alt="Domyślny obraz" class="w-full h-[250px] object-cover rounded-md">
                     {% endif %}
                     <h2 class="text-xl font-bold text-gray-800 hover:underline mb-1">{{ article.title }}</h2>
                 </a>
@@ -44,7 +44,7 @@
 
                 <!-- Informacje dodatkowe -->
                 <p class="text-sm text-gray-500 mt-2">
-                    {{ article.created_at|date:"F Y" }} • {{ article.views }} wyświetleń</p>
+                    {{ article.created_at|date:"F Y" }} • {{ article.read_count }} wyświetleń</p>
 
                 <!-- Przyciski Download, Save, Follow oraz Lubię to i Komentuj w jednej linii -->
                 <div class="mt-6 flex justify-between items-center text-sm">
