followed-articles added

--- a/templates/common/_sidebar.html
+++ b/templates/common/_sidebar.html
@@ -22,8 +22,8 @@
                 </a>
             </li>
 
-            <li class="block rounded-md bg-pink-100 px-3 py-2 text-base font-medium text-pink-700">
-                <a href="#">
+            <li class="block rounded-md bg-gray-100 px-3 py-2 text-base font-medium text-gray-700">
+                <a href="{% url 'followed_articles' %}">
                     Polubione artykuły
                 </a>
             </li>
