Add basic search functionality

--- a/templates/main.html
+++ b/templates/main.html
@@ -44,7 +44,7 @@
 
                 <!-- Informacje dodatkowe -->
                 <p class="text-sm text-gray-500 mt-2">
-                    {{ article.created_at|date:"F Y" }} • {{ article.views }} wyświetleń</p>
+                    {{ article.created_at|date:"F Y" }} • {{ article.read_count }} wyświetleń</p>
 
                 <!-- Przyciski Download, Save, Follow oraz Lubię to i Komentuj w jednej linii -->
                 <div class="mt-6 flex justify-between items-center text-sm">
