1._sidebar.html - zmiana przycisku 'Polubione artykuły' na 'Obserwowane artykuły'. 2. front_pages_view.py - zmiana w metodzie followed_articles. ID obserwowanych artykułów pobierane są obecnie z tabeli ArticleWatch. Poprawione przekierowanie dla akcji 'Nie obserwuj' na stronie 'followed_articles.html'. 3.article.html, followed_articles.html, main.html - zmiana nazwy przycisku z 'Unfollow' na 'Nie obserwuj'

--- a/templates/article.html
+++ b/templates/article.html
@@ -60,7 +60,7 @@
                                 <input type="hidden" name="requester" value="article">
                                 <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
                                     <span class="text-base">🔕</span>
-                                    <span>Unfollow</span>
+                                    <span>Nie obserwuj</span>
                                 </button>
                             </form>
                         {% else %}
