--- a/templates/common/_sidebar.html
+++ b/templates/common/_sidebar.html
@@ -24,7 +24,7 @@
 
             <li class="block rounded-md bg-gray-100 px-3 py-2 text-base font-medium text-gray-700">
                 <a href="{% url 'followed_articles' %}">
-                    Polubione artykuły
+                    Obserwowane artykuły
                 </a>
             </li>
         </ul>
