--- a/templates/followed_articles.html
+++ b/templates/followed_articles.html
@@ -59,7 +59,7 @@
                   <input type="hidden" name="requester_url" value="{{ request.get_full_path }}">
                   <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
                     <span class="text-base">🔕</span>
-                    <span>Unfollow</span>
+                    <span>Nie obserwuj</span>
                   </button>
                 </form>
               {% else %}
