--- a/templates/followed_articles.html
+++ b/templates/followed_articles.html
@@ -114,7 +114,7 @@
       {% endfor %}
       {% include 'common/pagination.html' with page_obj=page_obj %}
     {% else %}
-      <p>Nie masz jeszcze żadnych polubionych artykułów. Polub kilka, aby je tutaj zobaczyć! ❤️</p>
+      <p>Nie obserwujesz żadnego artykułu. Kliknij obserwuj 🔔 na wybranym artykule, aby go tutaj zobaczyć.</p>
     {% endif %}
   </section>
 {% endblock content %}
