--- a/templates/user_register_form.html
+++ b/templates/user_register_form.html
@@ -1,7 +1,7 @@
 {% extends 'basic_template.html' %}
 {% load static %}
 {% block content %}
-<div class="max-w-md mx-auto mt-10 bg-white p-8 rounded-2xl shadow-lg">
+<div class="col-span-3 max-w-md mx-auto bg-white p-8 rounded-2xl shadow-lg">
   <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Rejestracja użytkownika</h2>
   <form method="POST" class="space-y-4" action="{% url 'register' %}">
     {% csrf_token %}
