--- a/templates/article.html
+++ b/templates/article.html
@@ -77,24 +77,26 @@
 
                     <!-- Przycisk po prawej: Like -->
                     <div class="flex items-center gap-4">
-                        <span>{{ article.like_count }} ❤️</span>
+                        <span>{{ like_count }} ❤️</span>
 
                         {% if article.liked_by_user %}
-                            <form action="{% url 'unlike_article' article.id %}" method="post" class="inline">
-                                {% csrf_token %}
-                                <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
-                                    <span class="text-base">👍</span>
-                                    <span>Lubisz to</span>
-                                </button>
-                            </form>
+                            <button
+                                    class="like-toggle text-blue-600 hover:underline flex items-center gap-1"
+                                    data-liked="true"
+                                    data-article-id="{{ article.id }}"
+                            >
+                                <span class="text-base">👍</span>
+                                <span class="like-label">Lubisz to</span>
+                            </button>
                         {% else %}
-                            <form action="{% url 'like_article' article.id %}" method="post" class="inline">
-                                {% csrf_token %}
-                                <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
-                                    <span class="text-base">👍</span>
-                                    <span>Polub</span>
-                                </button>
-                            </form>
+                            <button
+                                    class="like-toggle text-blue-600 hover:underline flex items-center gap-1"
+                                    data-liked="false"
+                                    data-article-id="{{ article.id }}"
+                            >
+                                <span class="text-base">👍</span>
+                                <span class="like-label">Polub</span>
+                            </button>
                         {% endif %}
                     </div>
                 </div>
