--- a/templates/common/_sidebar.html
+++ b/templates/common/_sidebar.html
@@ -24,7 +24,7 @@
 
             <li class="block rounded-md bg-gray-100 px-3 py-2 text-base font-medium text-gray-700">
                 <a href="{% url 'followed_articles' %}">
-                    Polubione artykuły
+                    Obserwowane artykuły
                 </a>
             </li>
         </ul>
@@ -49,7 +49,7 @@
 <!-- Sekcja "Who to follow" - domyślnie statyczna -->
 <!-- W przyszłości może być dynamiczna na podstawie modelu użytkowników -->
 <div class="bg-white p-4 rounded-md shadow mt-6">
-    <h3 class="font-semibold mb-2">Who to follow</h3>
+    <h3 class="font-semibold mb-2">Proponowani znajomi</h3>
     <ul class="space-y-2">
         <li class="flex justify-between items-center">
             <span>Oktawia Wiczlińska</span>
